@@ -1,3 +1,11 @@
+2007-09-22  Al Riddoch  <alriddoch@zepler.org>
+
+	* acinclude.m4: Update to a more recent version of the pkgconfig
+	  macros.
+
+	* configure.ac: Use the latest pkgconfig macros, and improve the
+	  quality of error messages.
+
 2007-01-28  Al Riddoch  <alriddoch@zepler.org>
 
 	* Release 1.3.12, Interface version 13.
